[build-system]
requires = [
  "setuptools >= 42.0.0",  # required by pyproject
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = "True"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,"
ignore = [
    "W503",  # line break before binary operator
    "W504",  # line break after binary operator
    "E203",  # https://github.com/psf/black/issues/315
]
